# kdoctor

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
ai-sre-platform/: gemini_analyzer.py  local_analyzer.py
kdoctor/: main.py
kdoctor/analyzers/: cluster_analyzer.py  deployment_analyzer.py  deployment_audit.py  deployment_diff.py  deployment_drift.py  deployment_investigator.py  deployment_rca.py  deployment_rollback_advisor.py  deployment_rollout.py  incident_analyzer.py  investigate_analyzer.py  namespace_analyzer.py  pod_analyzer.py
kdoctor/clients/: kube_client.py
kdoctor/commands/: cluster.py  deployment.py  incident.py  investigate.py  namespace.py  pod.py
kdoctor/utils/: kube.py  output.py  risk.py
tests/: helpers.py  test_cli_registration.py  test_deployment_audit.py  test_deployment_drift.py  test_incident_analyzer.py
